--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -684,8 +684,8 @@
                             <DetailRowTemplate Context="order">
                                 <DataGrid TItem="OrderDeliveryDto"
                                           @bind-SelectedRow="@SelectedOrderDelivery"
-                                          ReadData="@(async (e) => await OnOrderDeliveryDataReadAsync(e, order.Id))"
-                                          Data="@GetOrderDeliveries(order.Id)"
+                                          ReadData="@(async (e) => await OnOrderDeliveryDataReadAsync(e, order.OrderId))"
+                                          Data="@GetOrderDeliveries(order.OrderId)"
                                           DetailRowTrigger="@((e) => e.Item.Items?.Count > 0 && e.Item.Id == SelectedOrderDelivery?.Id)"
                                           Responsive
                                           Bordered>
@@ -699,8 +699,10 @@
                                             <DisplayTemplate>@L[order.DeliveryMethod.ToString()]</DisplayTemplate>
                                         </DataGridColumn>
                                         <DataGridColumn Caption="@L["Last Updated Date"]">
+                                            <DisplayTemplate>@L[order.LastModificationTime.ToString()]</DisplayTemplate>
                                         </DataGridColumn>
-                                        <DataGridColumn Caption="@L["Edition"]">
+                                        <DataGridColumn Caption="@L["Editor"]">
+                                              <DisplayTemplate>@L[context.Editor]</DisplayTemplate>
                                         </DataGridColumn>
                                         <DataGridColumn Caption="@L["Delivery Status"]">
                                             <DisplayTemplate>@L[order.ShippingStatus.ToString()]</DisplayTemplate>
