--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -74,7 +74,7 @@
             
             @if (SelectedTabName is PikachuResource.ToBeShipped) 
             {
-                @if ((Orders.Where(x => x.IsSelected).Count() != 1) || (Orders.Where(x => x.InvoiceNumber != null && x.IsSelected).Any()))
+                @if ((Orders.Where(x => x.IsSelected).Count() < 1) || (Orders.Where(x => x.InvoiceNumber != null && x.IsSelected).Any()))
                 {
                     <Button Type="@ButtonType.Button" disabled Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
@@ -83,8 +83,11 @@
                 }
                 else
                 { 
-                    <Button Type="@ButtonType.Button" Class="ms-1 btn btn-sm btn-primary">
+                    <Button Type="@ButtonType.Button" 
+                                Clicked="OrderItemShipped"
+                                Class="ms-1 btn btn-sm btn-primary">
                         <i class="fa fa-print"></i>
+
                         @L["Shipped"]
                     </Button>
                 }
