Commit For PK-574

--- a/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/CreateProductCategory.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/CreateProductCategory.razor
@@ -94,6 +94,7 @@
                         <Div Class="container-less-filepicker">
                             <Field>
                                 <FilePicker Changed="@OnFileUploadAsync"
+                                    FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
                                             ShowMode="FilePickerShowMode.List"
                                             Multiple
                                             @ref="FilePicker"
