--- a/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/EditProductCategory.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/EditProductCategory.razor
@@ -116,6 +116,7 @@
                         <Div Class="container-less-filepicker">
                             <Field>
                                 <FilePicker Changed="@OnFileUploadAsync"
+                                     FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
                                             ShowMode="FilePickerShowMode.List"
                                             Multiple
                                             @ref="FilePicker"
