Redirection Page added

--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -57,4 +57,5 @@
     <abp-script-bundle name="@BlazorLeptonXLiteThemeBundles.Scripts.Global" />
     <script src="~/fileDownload.js"></script>
     <script src="~/order.js"></script>
+    <script src="~/redirectConfirmClose.js"></script>
 </body>
