Commit For Pk-575

--- a/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
@@ -50,13 +50,13 @@
                   <Validations @ref="@CreateValidationsRef" Model="@CreateUpdateElectronicInvoiceDto" ValidateOnLoad="false">
                     <div class=" col-12 row mb-3">
                     <div class="col-3 text-lg-end ">
-                        <FieldLabel>@L["Use ECPay electronic receipt"]</FieldLabel>
+                        <FieldLabel>@L["UseECPayelectronicreceipt"]</FieldLabel>
                     </div>
                     <div class="col-9">
                         <Switch TValue="bool" @bind-Checked="@CreateUpdateElectronicInvoiceDto.IsEnable"  ></Switch>
                         <AntDesign.Alert Type="@AntDesign.AlertType.Info"
-                        Message="Info"
-       Description="If this setting is turned off, please print the invoice for the customer"
+                        Message="@L["Info"]"
+       Description="@L["Ifthissettingisturnedoff,pleaseprinttheinvoiceforthecustomer"]"
        ShowIcon="true" />
                     </div>
                     
