--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1134,6 +1134,18 @@
                                                         </Div>
                                                     </Div>
                                                 }
+                                                <div class="col-2">
+                                                    <label>@L["Style"]</label>
+                                                </div>
+                                                <div class="col-10">
+                                                    <Select TValue="StyleForCarouselImages" Class="form-select"
+                                                            @bind-Value="carouselImages.FirstOrDefault().Style">
+                                                        @foreach (var enumValue in Enum.GetValues(typeof(StyleForCarouselImages)))
+                                                        {
+                                                            <SelectItem Value="@enumValue">@L[enumValue.ToString()]</SelectItem>
+                                                        }
+                                                    </Select>
+                                                </div>
                                             </div>
                                         }
                                     }
