--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1226,22 +1226,19 @@
                                                     </Div>
                                                     <Field>
                                                         <FilePicker @ref="GroupPurchaseOverviewFilePickers[GroupPurchaseOverviewModules.IndexOf(module)]"
-                                                         FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
-                                                                    Changed="@(async (e) => await OnImageUploadAsync(e,
-                                                                                                                     module,
-                                                                                                                     GroupPurchaseOverviewFilePickers[GroupPurchaseOverviewModules.IndexOf(module)]))"
-                                                                    ShowMode="FilePickerShowMode.List",
-                                                                    
-                                                                    Accept=".jpg, .png, .svg ,.jpeg,.webp">
+                                                                    FilePickerLocalizer="(key, args) => LocalizeFilePicker(key, args)"
+                                                                    Changed="@(async (e) => await OnImageUploadAsync(e, module, GroupPurchaseOverviewFilePickers[GroupPurchaseOverviewModules.IndexOf(module)]))"
+                                                                    ShowMode="FilePickerShowMode.List"
+                                                                    Accept=".jpg, .png, .svg, .jpeg, .webp">
                                                             <FileTemplate>
                                                                 <Div Flex="Flex.JustifyContent.Between">
                                                                     <Div>
                                                                         <Heading Size="HeadingSize.Is6">@context.File.Name</Heading>
-                                                                        <Paragraph>@FilePicker.GetFileSizeReadable(context.File)</Paragraph>
-                                                                    </Div>
-                                                                    <Div Class="ps-2">
-                                                                        <Div>
-                                                                            @if (context.File.Status is FileEntryStatus.Ready)
+                                                                            <Paragraph>@FilePicker.GetFileSizeReadable(context.File)</Paragraph>
+                                                                        </Div>
+                                                                        <Div Class="ps-2">
+                                                                            <Div>
+                                                                                @if (context.File.Status is FileEntryStatus.Ready)
                                                                             {
                                                                                 <Icon TextColor="TextColor.Primary" Name="IconName.FileUpload" />
                                                                             }
@@ -1280,14 +1277,14 @@
                                                                 <Div Class="image-list-container">
                                                                     <Div Class="image-container">
                                                                         <Image Class="blur-image" Source="@module.Image" Text="Logo Image" Fluid />
-                                                                        <Button Class="delete-button"
-                                                                                Clicked="@(async (e) => await DeleteImageAsync(e, module))">
-                                                                            <i class="fa fa-trash" />
-                                                                        </Button>
-                                                                    </Div>
-                                                                </Div>
-                                                            </Div>
-                                                        </Div>
+                                                                         <Button Class="delete-button"
+                                                                                 Clicked="@(async (e) => await DeleteImageAsync(e, module))">
+                                                                             <i class="fa fa-trash" />
+                                                                         </Button>
+                                                                     </Div>
+                                                                 </Div>
+                                                             </Div>
+                                                         </Div>
                                                     }
                                                 </Div>
                                                 <Div Class="col-6">
@@ -1299,23 +1296,23 @@
                                                     </Div>
                                                     <Div Class="col-2 pb-1">
                                                         <Label>@L["SubTitle"]</Label>
-                                                    </Div>
-                                                    <Div Class="col-12 pb-1">
-                                                        <TextEdit @bind-Text="@module.SubTitle" />
-                                                    </Div>
-                                                    <Div Class="col-2 pb-1">
-                                                        <Label>@L["BodyText"]</Label>
-                                                    </Div>
-                                                    <Div Class="col-12 pb-1">
-                                                        <TextEdit @bind-Text="@module.BodyText" />
-                                                    </Div>
-                                                    <Div Class="col-12 pb-1"></Div>
-                                                    <Div Class="col-12 pb-1">
-                                                        <Switch TValue="bool"
-                                                                @bind-Checked="@module.IsButtonEnable" />
-                                                    </Div>
+                                                        </Div>
+                                                        <Div Class="col-12 pb-1">
+                                                            <TextEdit @bind-Text="@module.SubTitle" />
+                                                        </Div>
+                                                        <Div Class="col-2 pb-1">
+                                                            <Label>@L["BodyText"]</Label>
+                                                        </Div>
+                                                        <Div Class="col-12 pb-1">
+                                                            <TextEdit @bind-Text="@module.BodyText" />
+                                                        </Div>
+                                                        <Div Class="col-12 pb-1"></Div>
+                                                        <Div Class="col-12 pb-1">
+                                                            <Switch TValue="bool"
+                                                                    @bind-Checked="@module.IsButtonEnable" />
+                                                        </Div>
 
-                                                    @if (module.IsButtonEnable)
+                                                        @if (module.IsButtonEnable)
                                                     {
                                                         <Div Class="col-2 pb-1">
                                                             <Label>@L["ButtonText"] <Span Class="text-danger">*</Span></Label>
